<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="1dp"
    android:padding="10dp"
    tools:context=".ui.detail.DetailActivity">

    <ImageView
        android:id="@+id/img_detail"
        android:layout_width="150dp"
        android:layout_height="220dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/poster_arrow"
        android:contentDescription="@string/poster" />

    <TextView
        android:id="@+id/tv_title_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/img_detail"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="How to Train Your Dragon" />

    <TextView
        android:id="@+id/tv_date_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@+id/img_detail"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_detail"
        tools:text="12 Januari 2019" />

    <com.mikhaellopez.circularprogressbar.CircularProgressBar
        android:id="@+id/circularProgressBar"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:cpb_background_progressbar_color="#95a5a6"
        app:cpb_background_progressbar_width="5dp"
        app:cpb_progress_direction="to_right"
        app:cpb_progressbar_color="#b6bbd8"
        app:cpb_progressbar_width="10dp"
        app:cpb_round_border="false"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toEndOf="@+id/img_detail"
        app:layout_constraintTop_toBottomOf="@+id/tv_date_detail" />

    <TextView
        android:id="@+id/tv_userscore_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_72"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/circularProgressBar"
        app:layout_constraintEnd_toEndOf="@+id/circularProgressBar"
        app:layout_constraintStart_toStartOf="@+id/circularProgressBar"
        app:layout_constraintTop_toTopOf="@+id/circularProgressBar" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/user"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toEndOf="@+id/circularProgressBar"
        app:layout_constraintTop_toTopOf="@+id/circularProgressBar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/score"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/circularProgressBar"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/description"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_detail" />

    <TextView
        android:id="@+id/tv_description_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        android:lineSpacingExtra="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:text="@string/dummy_desc" />

    <ProgressBar
        android:id="@+id/detail_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        android:focusable="true"
        android:contentDescription="@string/tombol_favorite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/heart_black_2" />

</androidx.constraintlayout.widget.ConstraintLayout>